# clckwrks-theme-clckwrks

./: Makefile  Theme.hs  clckwrks-theme-clckwrks.cabal  default.nix  shell.nix
.github/workflows/: haskell-ci.yml
data/css/: bootstrap.css  bootstrap.min.css
swatchmaker/swatch/: bootstrap.min.css  bootswatch.less
