name:                clckwrks-theme-clckwrks
version:             0.3.3
synopsis:            simple bootstrap based template for clckwrks
homepage:            http://www.clckwrks.com/
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
category:            Clckwrks
build-type:          Simple
cabal-version:       >=1.8

data-files:
  data/css/bootstrap.css
  data/css/bootstrap.min.css
  data/css/bootstrap-responsive.css
  data/css/bootstrap-responsive.min.css
  data/img/glyphicons-halflings-white.png
  data/img/glyphicons-halflings.png

source-repository head
    type:     darcs
    subdir:   clckwrks-theme-clckwrks
    location: http://hub.darcs.net/stepcut/clckwrks

library
  exposed-modules:     Theme
                       Paths_clckwrks_theme_clckwrks
  build-depends:       base             >= 4.5 && < 5,
                       clckwrks         >= 0.16 && < 0.17,
                       containers       >= 0.4 && < 0.6,
                       hsp              == 0.7.*,
                       text             == 0.11.*
