name:                clckwrks-theme-clckwrks
version:             0.5.2.7
synopsis:            template for clckwrks.com
description:         simple bootstrap based template for clckwrks.com
homepage:            http://www.clckwrks.com/
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
category:            Clckwrks
build-type:          Simple
cabal-version:       1.18
tested-with:         GHC==8.0.2, GHC==8.2.2, GHC==8.4.4, GHC==8.6.5, GHC==8.8.4, GHC==8.10.7, GHC==9.0.2, GHC==9.2.2

data-files:
  data/css/bootstrap-theme.css
  data/css/bootstrap-theme.css.map
  data/css/bootstrap-theme.min.css
  data/css/clckwrks-theme.css
  data/css/clckwrks-theme.min.css
  data/css/bootstrap.css
  data/css/bootstrap.css.map
  data/css/bootstrap.min.css
  data/fonts/glyphicons-halflings-regular.eot
  data/fonts/glyphicons-halflings-regular.svg
  data/fonts/glyphicons-halflings-regular.ttf
  data/fonts/glyphicons-halflings-regular.woff
  data/fonts/glyphicons-halflings-regular.woff2
  data/js/bootstrap.js
  data/js/bootstrap.min.js
  data/js/npm.js

source-repository head
    type:     git
    location: https://github.com/clckwrks/clckwrks-theme-clckwrks

library
  default-language:    Haskell2010
  exposed-modules:     Theme
                       Paths_clckwrks_theme_clckwrks
  build-depends:       base                   >= 4.5  && < 5,
                       clckwrks               >= 0.23 && < 0.29,
                       containers             >= 0.4  && < 0.7,
                       happstack-authenticate >= 2.3  && < 2.7,
                       hsp                    >= 0.9  && < 0.11,
                       hsx2hs                 >= 0.13 && < 0.15,
                       mtl                    >= 2.1  && < 2.4,
                       text                   >= 0.11 && < 2.1,
                       web-plugins            >= 0.2  && < 0.5
